--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,7 @@
     {
       "resources": [
         "app/background/contentScripts/*.js",
+        "app/background/contentStyles/*.css",
         "app/public/js/jquery-3.5.1.min.js",
         "app/public/js/sweet.js",
         "app/public/img/*.gif",
@@ -43,15 +44,15 @@
     ]
   },
   "content_scripts": [
-    {
-      "run_at": "document_end",
-      "matches": [
-        "*://web.whatsapp.com/*"
-      ],
-      "css": [
-        "app/background/contentStyles/content.css"
-      ]
-    },
+    //{
+    //  "run_at": "document_end",
+    //  "matches": [
+    //    "*://web.whatsapp.com/*"
+    //  ],
+    //  "css": [
+    //    "app/background/contentStyles/content.css"
+    //  ]
+    //},
     {
       "run_at": "document_end",
       "matches": [
