--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,10 @@
   "description": "__MSG_app_description__",
   "short_name": "__MSG_app_title__",
   "default_locale": "en",
-  "version": "0.1",
+  "version": "1.0",
   "background": {
     "service_worker": "app/background/background.js",
-    "type": "module" //optional
+    "type": "module"
   },
   "icons": {
     "16": "app/public/logo.png",
@@ -42,22 +42,12 @@
     ]
   },
   "content_scripts": [
-  //  //{
-  //  //  "run_at": "document_end",
-  //  //  "matches": [
-  //  //    "*://web.whatsapp.com/*"
-  //  //  ],
-  //  //  "css": [
-  //  //    "app/background/contentStyles/content.css"
-  //  //  ]
-  //  //},
     {
       "run_at": "document_end",
       "matches": [
         "*://web.whatsapp.com/*"
       ],
       "js": [
-        //"app/public/js/jquery-3.5.1.min.js",
         "app/background/contentScripts/content.js"
 
       ]
