--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "__MSG_app_description__",
   "short_name": "__MSG_app_title__",
   "default_locale": "en",
-  "version": "1.2",
+  "version": "1.3",
   "background": {
     "service_worker": "app/background/background.js",
     "type": "module"
@@ -30,27 +30,23 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "app/background/contentScripts/*.js",
-        "app/background/contentStyles/*.css"
+        "app/background/contentScripts/content.js",
+        "app/background/contentStyles/blur/chatBoxMessageBox.css",
+        "app/background/contentStyles/blur/chatBoxTitle.css",
+        "app/background/contentStyles/blur/recentMessageAvatar.css",
+        "app/background/contentStyles/blur/recentMessageContent.css",
+        "app/background/contentStyles/blur/recentMessageHeader.css",
+        "app/background/contentStyles/blur/recentMessageSender.css",
+        "app/background/contentStyles/blur/recentMessageTick.css",
+        "app/background/contentStyles/blur/recentMessageTime.css",
+        "app/background/contentStyles/screen/fullScreen.css"
       ],
-      "matches": [ "<all_urls>" ]
+      "matches": [ "*://web.whatsapp.com/*" ]
     }
   ],
   "externally_connectable": {
     "matches": [
       "*://web.whatsapp.com/*"
     ]
-  },
-  "content_scripts": [
-    {
-      "run_at": "document_end",
-      "matches": [
-        "*://web.whatsapp.com/*"
-      ],
-      "js": [
-        "app/background/contentScripts/content.js"
-
-      ]
-    }
-  ]
+  }
 }
