--- a/source/manifest-mozilla.json
+++ b/source/manifest-mozilla.json
@@ -1,4 +1,5 @@
 {
+  "manifest_version": 2,
   "name": "__MSG_app_title__",
   "version": "1.4",
   "description": "__MSG_app_description__",
@@ -38,5 +39,5 @@
     "48": "app/public/logo.png",
     "128": "app/public/logo.png"
   },
-  "manifest_version": 2
+  "content_security_policy": "script-src 'self' 'sha256-Bm6SGASuSJ/y5W6tMmcnxeShdKrQ2QtIV2mH1Oh8qho='; object-src 'self'"
 }
